--- a/css/style.css
+++ b/css/style.css
@@ -301,3 +301,9 @@ h3{
     box-shadow: 0px 4.6666666667px 24px 3px rgba(247, 0, 148, 0.2);
  }
 }
+
+media(max-width:980px){
+	.lightrope {
+		width: 850px;
+	}
+}
